@@ -1,7 +1,7 @@
 .\"
 .\" $Id$
 .\"
-.TH fimrc 5 "(c) 2011\-2016 Michele Martone"
+.TH fimrc 5 "(c) 2011\-2017 Michele Martone"
 .SH NAME
 fimrc \- \fB fim \fP configuration file and language reference
 
@@ -262,7 +262,7 @@ echo {args}: print the {args} on console
 .B
 else
 .fi
-if(expression){action;}['else'{action;}] : see else
+if(expression){action;}['else'{action;}] : see if
 .fi
 
 .na
@@ -290,7 +290,7 @@ getenv {identifier} : display the value of the {identifier} environment variable
 .B
 goto
 .fi
-goto {['+'|'\-']{number}['%']['f'|'p']} | {/{regexp}/} | {'+//'}: jump to an image; if {number} is given, and not surrounded by any specifier, will go to image at index {number} ; if followed by '%', the effective index will be computed as a percentage to the current available images; if prepended by '\-' or '+', the jump will be relative to the current index; the 'f' specifier asks for the jump to occur within the files; the 'p' specifier asks for the jump to occur in terms of pages, within the current file; if /{regexp}/ is given, will jump to the first image matching the given /{regexp}/ regular expression pattern; if given '+//', will jump to the first different image matching the last given regular expression pattern. Match will occur on both file name and description, eventually loaded via desc or \-\-load\-image\-descriptions\-file. See also _lastgotodirection and _re_search_opts.
+goto {['+'|'\-']{number}['%']['f'|'p']} | {/{regexp}/} | {'+//'} | {{'+'|'\-'}{identifier}}: jump to an image; if {number} is given, and not surrounded by any specifier, will go to image at index {number} ; if followed by '%', the effective index will be computed as a percentage to the current available images; if prepended by '\-' or '+', the jump will be relative to the current index; the 'f' specifier asks for the jump to occur within the files; the 'p' specifier asks for the jump to occur in terms of pages, within the current file; if an {identifier} is encountered after a '+' or '\-' sign, jump to next or previous image having a different value for i:{identifier}; if /{regexp}/ is given, will jump to the first image matching the given /{regexp}/ regular expression pattern; if given '+//', will jump to the first different image matching the last given regular expression pattern. Match will occur on both file name and description, eventually loaded via desc or \-\-load\-image\-descriptions\-file. See also _lastgotodirection and _re_search_opts.
 .fi
 
 .na
@@ -304,7 +304,7 @@ help [{identifier}] : provide online help, assuming {identifier} is a variable, 
 .B
 if
 .fi
-if(expression){action;}['else'{action;}] : see if
+if(expression){action;}['else'{action;}] : see else
 .fi
 
 .na
@@ -1398,8 +1398,8 @@ bind  'Y' "narrow" "shrinks horizontally the image";
 #alias 'scd'   'scroll_console_down;' "";
 #alias 'console_scroll_up'   'if(_console_offset<_console_lines){_console_offset=_console_offset+1;}';
 #alias 'console_scroll_down' 'if(_console_offset>0){_console_offset=_console_offset\-1;}';
-alias 'console_scroll_up' 'if(_console_offset<_console_lines+console_scroll_n\-_rows){_console_offset=_console_offset+console_scroll_n;}';
-alias 'console_scroll_down' 'if(allow_round_scroll || (_console_offset>=console_scroll_n)){_console_offset=_console_offset\-console_scroll_n;}';
+alias 'console_scroll_up' 'if(_console_offset<_console_lines+console_scroll_n\-_rows){_console_offset=_console_offset+console_scroll_n;}' "scrolls up the virtual console";
+alias 'console_scroll_down' 'if(allow_round_scroll || (_console_offset>=console_scroll_n)){_console_offset=_console_offset\-console_scroll_n;}' "scrolls down the virtual console";
 alias 'console_scroll_reset' '{_console_offset=0;}';
 alias 'scu'   'console_scroll_up;'   "";
 alias 'scd'   'console_scroll_down;' "";
